  the options from being automatically translated [Boy]
+ Added $config_use_keyboard_handler with which you can turn
  the keyboardhandler off [Boy]
+ Added NF_NO_IMPORT, this will hide the import link 
  in the admin screen [Boy]
+ Added AF_DATE_DISPLAY_DAY which will make the display function
  of a date attribute include the day of the week [Boy]
* Fixed deleteAllowed in oneToManyRelation, when the filter is not 
  on the destination node. [Boy,Harrie]
* Fixed filtering and navigating after update/save for navigator [Boy]
* Fixed bug that would produce php error with NF_EDITAFTERADD 
  when a NULL value for a record is passed to editArray() [Boy]
* Fixed prev/next keyboard navigation in recordlists. [Yury]
* Fixed a potential session hijacking vulnerability. [Sandy]
* Improved themeability, now possible to style the menu and top frame
  differently from the main and eachother, by using templates
  and stylesheets [Boy]
* Fixed searching in oneToOneIntegrated relations and secureRelations,
  for normal/extended searching and sorting [Boy, Harrie]
* Fixed navigating for select mode [Boy,Yuri]
* atkQuery now checks for double joins [Boy,Harrie]

Changes in ATK 5.0.6
--------------------
* Bugfix in Oracle 9i/10G driver. [Ivo]
* 'Import' link is now hidden if NF_READONLY is set. [Ivo]
* Fixed bug in validateFilter for filters with tablename and added docs. [Boy]
* Fixed bug in record navigator when no form was present on the page. [Ivo]
+ Base language directory can be set with $config_language_basedir. [Boy]
* Default applicaton language dir is now languages/. [Ivo]

Changes in ATK 5.0.5
--------------------
+ Added generic CSV import feature. [Ivo, Mark]
+ Added atkFormatAttribute for editing formatted values. [Ivo]
+ Added paging to atkOneToManyrelation (embedded recordlists). [Harrie]
+ Added edit_values() and initial_values() methods to atkNode class. [Ivo]
+ Login screen now uses its own CSS file (login.css). [Boy]