@@ -16,6 +16,7 @@ Changes in ATK 5.0.7
   in the admin screen [Boy]
 + Added AF_DATE_DISPLAY_DAY which will make the display function
   of a date attribute include the day of the week [Boy]
++ Added {atkstyle} plugin to template engine. [Ivo]
 * Fixed deleteAllowed in oneToManyRelation, when the filter is not 
   on the destination node. [Boy,Harrie]
 * Fixed filtering and navigating after update/save for navigator [Boy]
